Added ability to search for books

--- a/src/Booklist/Booklist.css
+++ b/src/Booklist/Booklist.css
@@ -1,6 +1,7 @@
 .books-list {
     width: 100%;
     
+    
 }
 
 .book-info {
@@ -12,7 +13,7 @@
 .book {
     width: 100%;
     border-bottom: 1px solid black;
-    height: 300px;
+    overflow: auto;
 }
 
 
